# klipper-led_effect

./: .devcontainer.json  .gitignore  README.md  install-led_effect.sh  renovate.json  requirements_dev.txt
.github/workflows/: build.yaml  build_pages.yaml  release.yaml  test.yaml  update_previews.yaml  update_requirements.yaml
docs/: LED_Effect.md
examples/Voron_Stealthburner/: klipper-override.cfg  stealthburner_led_effects_3_leds.cfg  stealthburner_led_effects_barf.cfg  stealthburner_led_effects_barf_fan.cfg
file_templates/: led_effect.service  moonraker_update.txt
simulator/: app.py  pyproject.toml  simgui.fbp  simgui.py  wxForm.fbp
simulator/simulator/: klippermock.py  simgui.py  simulator.py
src/: led_effect.py  led_effect_golden_test.py
src/golden/: breathing.yml  comet.yml  gradient.yml  sb_critical_error.yml
