[tool.poetry]
name = "simulator"
version = "0.1.0"
description = ""
authors = ["Julian Schill <j.schill@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.11,>=3.8"
wxPython = "^4.2.0"
pyinstaller = "^5.4.1"
numpy = ">1.22"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
